--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # API Configuration
-VITE_API_URL=http://localhost:8000/api/v1
+# Use relative path in development to leverage Vite proxy (avoids CORS issues)
+# In production, set this to the full API URL
+# VITE_API_URL=http://localhost:8000/api/v1
 
 # OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
