feat: Implement group invitation and joining functionality
- Updated Login page to handle redirect URLs for group invitations.
- Enhanced GroupDetails page with invite link generation and clipboard copy functionality.
- Added GroupManagement page features for generating invite links for groups.
- Created JoinGroup page to allow users to join groups via invite links.
- Developed Groups and GroupDetail pages for students to view and manage their groups.
- Introduced new service methods for fetching group previews and joining groups by token.
- Improved UI components for better user experience and feedback.

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@
 # In production, set this to the full API URL
 VITE_API_URL=http://localhost:8000/api/v1
 
+# Frontend URL Configuration
+# Used for generating invite links
+VITE_FRONTEND_URL=http://localhost:5173
+
 # OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
 VITE_APPLE_CLIENT_ID=your-apple-client-id
