--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # API Configuration
 VITE_API_URL=http://localhost:8000/api/v1
 
+# Frontend URL Configuration
+# Used for generating invite links and other frontend URLs
+VITE_FRONTEND_URL=http://localhost:5173
+
 # OAuth Configuration
 VITE_GOOGLE_CLIENT_ID=
 VITE_APPLE_CLIENT_ID=
