--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.11",
+    "@tiptap/extension-color": "^3.14.0",
+    "@tiptap/extension-link": "^3.14.0",
+    "@tiptap/extension-text-style": "^3.14.0",
+    "@tiptap/react": "^3.14.0",
+    "@tiptap/starter-kit": "^3.14.0",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lightningcss": "^1.30.2",
     "lucide-react": "^0.555.0",
+    "quill": "^2.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
     "react-hot-toast": "^2.6.0",
+    "react-is": "^19.2.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
